# teamwork

./: .gitignore  LICENSE-MIT  README.md  minimal.py  pyproject.toml
notebooks/: decompose_sd3.ipynb  svbrdf_flux.ipynb  svbrdf_sdxl.ipynb
scripts/: eval_decomposition.py  train_decomposition.py
teamwork/: __init__.py  adapter.py  attn.py  batch.py  config.py  linear.py  pipeline_flux.py  pipeline_rgbx.py  pipeline_rgbx_sd3.py  pipeline_sd2.py  pipeline_sd3.py  pipeline_sdxl.py  pipelines.py  utils.py
